Fixed Dark Mode Title

--- a/website/styledark.css
+++ b/website/styledark.css
@@ -13,7 +13,7 @@ body {
     padding-bottom: 20%;
 }
 h1 {
-    color: black;
+    color: white;
 }
 h2 {
     font-size: 200%;
@@ -109,7 +109,7 @@ small {
     left: 50%;
     transform: translate(-50%, 100%);
     
-    color: black;
+    color: white;
     font-size: 24px;
 
 }
